[package]
name = "recall"
version = "1.0.0"
edition = "2021"
description = "Recall - Incremental Backup Tool based on NTFS Hard Links"
authors = ["shihuaidexianyu"]

[[bin]]
name = "recall"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }

walkdir = "2"

rayon = "1"

xxhash-rust = { version = "0.8", features = ["xxh3"] }
crossbeam-channel = "0.5"

filetime = "0.2"

chrono = "0.4"

path-clean = "1"

anyhow = "1"

indicatif = "0.17"

tempfile = "3"

serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
directories = "5.0"

dialoguer = "0.11"
console = "0.15"
glob = "0.3"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_Storage_Vss",
    "Win32_Security",
] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
